syntax="proto3";

import "google/protobuf/timestamp.proto";

message TimestampMessage {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp expires_at = 2;
  google.protobuf.Timestamp born_at = 3;
}